<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.sefiraat</groupId>
    <artifactId>Cultivation</artifactId>
    <version>1.0.0</version>

    <name>Cultivation</name>
    <description>A Slimefun Addon that adds a plethora of Magical and non-magical flora.</description>
    <url>https://github.com/wickidcow/SF_CultivationLegacy</url>

    <licenses>
        <license>
            <name>GPL-3.0 license</name>
            <url>https://github.com/Sefiraat/Cultivation/blob/main/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Sefiraat</name>
            <organization>Sefiraat</organization>
            <organizationUrl>https://www.sefiraat.dev</organizationUrl>
        </developer>
        <developer>
            <name>J3fftw</name>
            <organization>J3fftw</organization>
            <organizationUrl>https://j3fftw.dev</organizationUrl>
        </developer>
        <developer>
            <name>JustAHuman</name>
            <organization>JustAHuman</organization>
            <organizationUrl>https://github.com/JustAHuman-xD</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/wickidcow/SF_CultivationLegacy.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/wickidcow/SF_CultivationLegacy.git</developerConnection>
        <url>https://github.com/wickidcow/SF_CultivationLegacy</url>
    </scm>

    <build>
        <finalName>${project.name} v${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>dev.sefiraat.cultivation.bstats</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.github.bakedlibs.dough</pattern>
                            <shadedPattern>dev.sefiraat.cultivation.dough</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.papermc.lib</pattern>
                            <shadedPattern>dev.sefiraat.cultivation.paperlib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.github.sefiraat.sefilib</pattern>
                            <shadedPattern>io.github.sefiraat.cultivation.sefilib</shadedPattern>
                        </relocation>
                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
        </plugins>
        <defaultGoal>clean package</defaultGoal>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>

        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.*</include>
                    <include>tags/*.json</include>
                </includes>
            </resource>
        </resources>
    </build>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.projectKey>Cultivation</sonar.projectKey>
        <sonar.organization>sefiraat</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Core -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.11-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.slimefun</groupId>
            <artifactId>Slimefun</artifactId>
            <version>4.1.29</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.github.baked-libs</groupId>
            <artifactId>dough-api</artifactId>
            <version>1.2.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>dev.sefiraat</groupId>
            <artifactId>SefiLib</artifactId>
            <version>0.3.0</version>
            <scope>compile</scope>
        </dependency>

        <!-- Tools -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>annotations</artifactId>
            <version>3.0.1u2</version>
        </dependency>
        <dependency>
            <groupId>io.papermc</groupId>
            <artifactId>paperlib</artifactId>
            <version>1.0.7</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>acf-paper</artifactId>
            <version>0.5.1-SNAPSHOT</version>
        </dependency>
    </dependencies>

</project>
